feat: add rent controller
